--- a/package.xml
+++ b/package.xml
@@ -59,6 +59,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>message_filters</build_depend>
+  <build_depend>vision_msgs</build_depend>
   <build_export_depend>gazebo_plugins</build_export_depend>
   <build_export_depend>gazebo_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
@@ -66,6 +67,7 @@
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>message_filters</build_export_depend>
+  <build_export_depend>vision_msgs</build_export_depend>
   <exec_depend>gazebo_plugins</exec_depend>
   <exec_depend>gazebo_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
@@ -73,6 +75,7 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>message_filters</exec_depend>
+  <exec_depend>vision_msgs</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
