implemented leader selection and following

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,6 +135,10 @@ add_executable(perception_node src/perception_node.cpp)
 target_link_libraries(perception_node ${catkin_LIBRARIES})
 add_dependencies(perception_node ${catkin_EXPORTED_TARGETS})
 
+add_executable(control_node src/control_node.cpp)
+target_link_libraries(control_node ${catkin_LIBRARIES})
+add_dependencies(control_node ${catkin_EXPORTED_TARGETS})
+
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
 #   src/${PROJECT_NAME}/swarm_drone.cpp
